--- a/src/app.css
+++ b/src/app.css
@@ -25,3 +25,24 @@
     text-align: center;
     margin: 30px 0;
 }
+.task-input{
+    outline: none;
+    width: 260px;
+    margin-right: 25px;
+    margin-left: 30px;
+    padding: 15px;
+    font-size: 20px;
+    color: #ccc;
+    background-color: #042766;
+    border: 1px solid #c89666;
+    border-radius: 10px;
+}
+.add-button{
+    width: 70px;
+    padding: 15px 15px;
+    font-size: 20px;
+    border: 0;
+    border-radius: 10px;
+    background-color: #f1af71;
+    cursor: pointer;
+}
