--- a/src/app.css
+++ b/src/app.css
@@ -43,6 +43,73 @@
     font-size: 20px;
     border: 0;
     border-radius: 10px;
+    color: #042766;
     background-color: #f1af71;
     cursor: pointer;
+}
+.search-button{
+    margin: 10px;
+    width: 70px;
+    padding: 15px 0;
+    font-size: 20px;
+    border: 0;
+    border-radius: 10px;
+    color: #042766;
+    background-color: #f1af71;
+    cursor: pointer;
+}
+.list-item{
+    display: flex;
+    margin: 10px 0;
+    padding: 10px;
+    max-height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+
+}
+.button-check,
+.button-delete,
+.button-edit,
+.button-hide{
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 28px;
+    background-color: transparent;
+    border-radius: 50%;
+}
+.button-check{
+    color: #58ca49;
+    margin-right: 10px;
+
+}
+.button-edit{
+    color: #042766;
+    margin-right: 10px;
+}
+.button-delete{
+    color: #ca4432;
+}
+.button-hide{
+    margin: 0px 8px;
+    color:#1a8dcf;
+}
+.check{
+    text-decoration-style: solid;
+    text-decoration-line: line-through;
+    text-decoration-color: #58ca49;
+    opacity: 0.6;
+}
+.list{
+    width: 400px;
+    background-color: #ccc;
+    border: none;
+    color: #042766;
+    font-size: 20px;
+    padding-left: 10px;
+    margin-right: 15px;
+}
+input:focus,
+button:focus{
+    outline: none;
 }
